<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo_restaurante"
            android:src="@drawable/logo_burgao" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large_notification_restaurant"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large_notification_title_order" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/large_notification_order"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_notification_status"
        android:textColor="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/active_background_step" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="2"
            android:background="@drawable/active_background_step" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/inactive_background_step" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/large_notification_description"
        android:textColor="#000" />

</LinearLayout>