<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/small_notification_image"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:contentDescription="@string/small_notification_image_description"
            android:src="@drawable/delivery" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/small_notification_stepMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_notification_title"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/small_notification_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_notification_status"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/small_notification_step1"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/active_background_step"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/small_notification_step2"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="2"
            android:background="@drawable/inactive_background_step"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/small_notification_step3"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/inactive_background_step"
            android:orientation="vertical" />
    </LinearLayout>
</LinearLayout>